# webnetlab

./: README.md  discover_topology.py  sacramento_network_topology.excalidraw  sacramento_network_topology.md  topology_raw.json  webnetlab-plan.md
webnetlab/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  docker-compose.override.yml  docker-compose.yml
webnetlab/agent/: Dockerfile  agent.py  mib_store.py  oid_resolver.py  requirements.txt
webnetlab/backend/: Dockerfile  alembic.ini  pyproject.toml
webnetlab/backend/alembic/: env.py
webnetlab/backend/alembic/versions/: a1b2c3d4e5f6_add_oid_tree_path_to_mibs.py  b3c4d5e6f7a8_add_snmp_port_and_host_interface.py  c4d5e6f7a8b9_add_value_type_to_oid_values.py  ecff710e6dff_initial_schema.py
webnetlab/backend/app/: config.py  database.py  main.py
webnetlab/backend/app/models/: __init__.py  audit.py  device.py  mib.py  network.py  oid_value.py  topology.py
webnetlab/backend/app/routers/: __init__.py  devices.py  mibs.py  networks.py  oids.py  topology.py
webnetlab/backend/app/schemas/: device.py  network.py  oid_value.py  topology.py
webnetlab/backend/app/services/: docker_service.py  mib_service.py  oid_push_service.py  topology_service.py  walk_parser.py
webnetlab/docs/: linux-lan-mode.md
webnetlab/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webnetlab/frontend/src/: App.tsx  styles.css
webnetlab/infra/: linux-macvlan-setup.sh
webnetlab/infra/nginx/: default.conf
webnetlab/mibs/: IF-MIB_oids.json
webnetlab/seeds/: README.md  sacramento_import.py
(+20 files in other folders)
